# masters-thesis-data-generation

./: CMakeLists.txt  README.md
2018-3-30-test-suite-precodegen-find-ld-ld-op-st/: CMakeLists.txt  Makefile
find-ld-ld-op-st_multisource-applications-selected/: CMakeLists.txt
find-ld-ld-op-st_multisource-benchmarks-selected/: CMakeLists.txt
multisource-applications-all-find-pim-subgraphs/: CMakeLists.txt
multisource-applications-c-find-pim-subgraphs/: CMakeLists.txt
multisource-applications-find-ld-ld-op-st/: CMakeLists.txt
multisource-applications-selected-find-pim-subgraphs/: CMakeLists.txt
multisource-applications-some-find-pim-subgraphs/: CMakeLists.txt
multisource-benchmarks-all-find-pim-subgraphs/: CMakeLists.txt
multisource-benchmarks-find-ld-ld-op-st/: CMakeLists.txt
multisource-benchmarks-selected-find-pim-subgraphs/: CMakeLists.txt
utils/: parse-find-ld-ld-op-st-results.py  parse-find-pim-subgraphs-results.py
